--- a/indexes/nsc424/47.md
+++ b/indexes/nsc424/47.md
@@ -1,5 +1,6 @@
 ### 纪元评论：纪元特稿
 ---
+#### [【特稿】四亿人三退 红朝将倾 退党保平安](../../pages/nsc424/n13794378.md) 
 #### [【特稿】穿越苦难 守住心中的善](../../pages/nsc424/n13784979.md) 
 #### [【特稿】乱世中的恩典和希望](../../pages/nsc424/n13734687.md) 
 #### [【特稿】中共祸国殃民七十二年](../../pages/nsc424/n13272607.md) 
@@ -28,7 +29,6 @@
 #### [【特稿】法轮功反迫害20年 和平抗暴唤良知](../../pages/nsc424/n11389135.md) 
 #### [【特稿】中国共产党是邪教组织](../../pages/nsc424/n11355551.md) 
 #### [【特稿】中国共产党是邪教组织](../../pages/nsc424/n11355551.md) 
-#### [【特稿】欢迎举报江泽民等人权恶棍美国资产](../../pages/nsc424/n11303040.md) 
 #### [【特稿】欢迎举报江泽民等人权恶棍美国资产](../../pages/nsc424/n11303040.md) 
 
 ---
