--- a/indexes/nsc1028/61.md
+++ b/indexes/nsc1028/61.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [中共罪行录之八十四：政治保卫局与万人坑](../../pages/nsc1028/n13795320.md) 
 #### [王友群：毛泽东第四任妻子江青自杀之谜](../../pages/nsc1028/n13791949.md) 
 #### [袁斌：我们从小到大学到的历史哪些是假的（18）](../../pages/nsc1028/n13792132.md) 
 #### [古啸：悲惨绝伦 中共摧残女性叙事](../../pages/nsc1028/n13791297.md) 
@@ -29,7 +30,6 @@
 #### [王友群：原中共上将房峰辉沦为阶下囚之谜](../../pages/nsc1028/n13746271.md) 
 #### [中共罪行录之七十七：饥饿的北京](../../pages/nsc1028/n13742533.md) 
 #### [【名家专栏】马斯克与中共在太空的较量](../../pages/nsc1028/n13741595.md) 
-#### [王友群：江泽民亲信黄菊给上海留下巨大祸患](../../pages/nsc1028/n13738097.md) 
 
 ---
 #### 第 [ [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) ] 页
