--- a/indexes/nsc993/85.md
+++ b/indexes/nsc993/85.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [大数据说话，疫苗有效率严重造假！（一）](../../pages/nsc993/n13796318.md) 
 #### [新州：二十三年反迫害 铸就救世真英雄](../../pages/nsc993/n13796295.md) 
 #### [燕云：天赐口舌，毋得妄阻](../../pages/nsc993/n13796291.md) 
 #### [【网海拾贝】习近平拿着刀将自己逼到了死角](../../pages/nsc993/n13796240.md) 
@@ -29,7 +30,6 @@
 #### [何良懋：钳制舆论的政权 离灭亡已不远](../../pages/nsc993/n13786910.md) 
 #### [【网海拾贝】这党怎么能不把人民吃干榨尽呢？！](../../pages/nsc993/n13785978.md) 
 #### [北京变相禁止酒店办婚宴 网民：“防疫防魔怔了”](../../pages/nsc993/n13785973.md) 
-#### [反迫害23周年 法轮功学员给警察的一封信](../../pages/nsc993/n13785419.md) 
 
 ---
-#### 第 [ [84](./84.md) / [83](./83.md) / [82](./82.md) / [81](./81.md) / [80](./80.md) / [79](./79.md) / [78](./78.md) / [77](./77.md) ] 页
+#### 第 [ [85](./85.md) / [84](./84.md) / [83](./83.md) / [82](./82.md) / [81](./81.md) / [80](./80.md) / [79](./79.md) / [78](./78.md) ] 页
