--- a/indexes/nsc1035/54.md
+++ b/indexes/nsc1035/54.md
@@ -1,5 +1,7 @@
 ### 纪元评论：感悟随笔
 ---
+#### [楚一丁：夏游太浩湖随笔](../../pages/nsc1035/n13796515.md) 
+#### [郑愚山：“墙国”少年躺平纪实](../../pages/nsc1035/n13796701.md) 
 #### [楚一丁：盐湖随笔](../../pages/nsc1035/n13796541.md) 
 #### [袁斌：剑指共产极权的捷克摇滚名曲《百分之百》](../../pages/nsc1035/n13777612.md) 
 #### [吴吕南：乱我心者 今日之日多烦忧](../../pages/nsc1035/n13777510.md) 
@@ -28,8 +30,6 @@
 #### [观雨堂主：作弊](../../pages/nsc1035/n13717221.md) 
 #### [长风拂泪：散文时评——太平年](../../pages/nsc1035/n13713601.md) 
 #### [章明之：科学无法证实神不存在](../../pages/nsc1035/n13712224.md) 
-#### [《抓捕2》：正反派警察对峙，一部绝不能错过的好电影](../../pages/nsc1035/n13711458.md) 
-#### [李宥萱：当短视频崛起，你，上瘾了吗？](../../pages/nsc1035/n13678127.md) 
 
 ---
 #### 第 [ [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) ] 页
