--- a/indexes/nsc1025/205.md
+++ b/indexes/nsc1025/205.md
@@ -1,5 +1,6 @@
 ### 纪元评论：时政评论
 ---
+#### [杨威：中美关系的北戴河效应](../../pages/nsc1025/n13797232.md) 
 #### [周晓辉： 八一招待会上有蹊跷  习五年前讲话重登](../../pages/nsc1025/n13797100.md) 
 #### [【名家专栏】台海局势的走向](../../pages/nsc1025/n13796909.md) 
 #### [钟原：中共对台网络攻击比导弹更真实](../../pages/nsc1025/n13796789.md) 
@@ -29,7 +30,6 @@
 #### [【名家专栏】中共在海外压制人权的新手段](../../pages/nsc1025/n13793240.md) 
 #### [王赫：拜习会与中共的“精神胜利法”](../../pages/nsc1025/n13793087.md) 
 #### [觅真：三退临近四亿 《九评》功不可没](../../pages/nsc1025/n13793064.md) 
-#### [【名家专栏】科技是温室气体的主要来源之一](../../pages/nsc1025/n13792454.md) 
 
 ---
 #### 第 [ [205](./205.md) / [204](./204.md) / [203](./203.md) / [202](./202.md) / [201](./201.md) / [200](./200.md) / [199](./199.md) / [198](./198.md) ] 页
