--- a/indexes/nsc1025/206.md
+++ b/indexes/nsc1025/206.md
@@ -1,5 +1,10 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】中共的经济奇迹从来不会持久](../../pages/nsc1025/n13798186.md) 
+#### [王赫：四亿人“三退”的数字和背后艰辛](../../pages/nsc1025/n13797747.md) 
+#### [钟原：北戴河会议从未遇到的三大难题](../../pages/nsc1025/n13797744.md) 
+#### [葵阳：独裁金字塔将坍塌于匹夫之怒](../../pages/nsc1025/n13797725.md) 
+#### [乾元：历史到底赋予了台湾怎么样的重任](../../pages/nsc1025/n13797643.md) 
 #### [杨宁：福建古桥被烧毁透凶兆 上天再示警](../../pages/nsc1025/n13797685.md) 
 #### [颜丹：陆台富商用钱投票 中共情何以堪](../../pages/nsc1025/n13797541.md) 
 #### [【名家专栏】斯里兰卡破产后 北京面临的挫折](../../pages/nsc1025/n13797378.md) 
@@ -25,11 +30,6 @@
 #### [王赫：中共僵硬 中概股大概率从美退市](../../pages/nsc1025/n13794319.md) 
 #### [王友群：四亿人三退是解体中共的强大动力](../../pages/nsc1025/n13794138.md) 
 #### [【名家专栏】中国GDP未达目标 面临滞胀](../../pages/nsc1025/n13793963.md) 
-#### [颜丹：“二舅”能治好中国人的精神内耗？](../../pages/nsc1025/n13794111.md) 
-#### [周晓辉：敏感时刻中央统战会议召开 台湾要警惕](../../pages/nsc1025/n13793404.md) 
-#### [袁斌：中共历史上最邪恶最血腥的一页](../../pages/nsc1025/n13793834.md) 
-#### [陈思敏：从习近平整顿“芯腐败”所想到的](../../pages/nsc1025/n13793789.md) 
-#### [杨威：中共陷困局大搞统战 华人需警惕](../../pages/nsc1025/n13793590.md) 
 
 ---
-#### 第 [ [205](./205.md) / [204](./204.md) / [203](./203.md) / [202](./202.md) / [201](./201.md) / [200](./200.md) / [199](./199.md) / [198](./198.md) ] 页
+#### 第 [ [206](./206.md) / [205](./205.md) / [204](./204.md) / [203](./203.md) / [202](./202.md) / [201](./201.md) / [200](./200.md) / [199](./199.md) ] 页
