--- a/indexes/nsc1025/206.md
+++ b/indexes/nsc1025/206.md
@@ -1,5 +1,10 @@
 ### 纪元评论：时政评论
 ---
+#### [吴惠林：认清中共的流氓本质](../../pages/nsc1025/n13799821.md) 
+#### [王赫：中共财政困局及其三大独特风险](../../pages/nsc1025/n13799127.md) 
+#### [沈舟：辽宁号、山东号航母哪去了？](../../pages/nsc1025/n13799214.md) 
+#### [【名家专栏】《加州逐渐消失的梦想》影评](../../pages/nsc1025/n13798871.md) 
+#### [周晓辉：唐山打人案无下文 精神病院挤满人](../../pages/nsc1025/n13799021.md) 
 #### [颜丹：台湾人不愿“统一” 中共没招儿](../../pages/nsc1025/n13799015.md) 
 #### [王友群：为什么必须退出中共党、团、队？](../../pages/nsc1025/n13798253.md) 
 #### [周晓辉：陆媒新闻透台湾人很自由 大陆人钦羡](../../pages/nsc1025/n13798778.md) 
@@ -25,11 +30,6 @@
 #### [沈舟：中共为何没有试射东风-17导弹](../../pages/nsc1025/n13795986.md) 
 #### [王友群：中共高官亦高危 退党方能保平安](../../pages/nsc1025/n13795881.md) 
 #### [谢田：佩洛西台湾行 中共认怂的诸多后果](../../pages/nsc1025/n13795734.md) 
-#### [杨宁： 四亿人三退与佩罗西区分中共与中国](../../pages/nsc1025/n13795721.md) 
-#### [【有冇搞错】“冲冠一怒”战必败](../../pages/nsc1025/n13795285.md) 
-#### [广宇：选票的魅力](../../pages/nsc1025/n13795197.md) 
-#### [杨威：美国就台湾问题对中共的一次摊牌](../../pages/nsc1025/n13795094.md) 
-#### [王友群：解体中共 得天时享地利赢人和](../../pages/nsc1025/n13795061.md) 
 
 ---
 #### 第 [ [206](./206.md) / [205](./205.md) / [204](./204.md) / [203](./203.md) / [202](./202.md) / [201](./201.md) / [200](./200.md) / [199](./199.md) ] 页
