--- a/indexes/nsc1035/54.md
+++ b/indexes/nsc1035/54.md
@@ -1,5 +1,6 @@
 ### 纪元评论：感悟随笔
 ---
+#### [《坐在自行车上的女孩》：棒打鸳鸯为何打不散？](../../pages/nsc1035/n13799272.md) 
 #### [楚一丁：夏游太浩湖随笔](../../pages/nsc1035/n13796515.md) 
 #### [郑愚山：“墙国”少年躺平纪实](../../pages/nsc1035/n13796701.md) 
 #### [楚一丁：盐湖随笔](../../pages/nsc1035/n13796541.md) 
@@ -29,7 +30,6 @@
 #### [观雨堂主：写信](../../pages/nsc1035/n13722788.md) 
 #### [观雨堂主：作弊](../../pages/nsc1035/n13717221.md) 
 #### [长风拂泪：散文时评——太平年](../../pages/nsc1035/n13713601.md) 
-#### [章明之：科学无法证实神不存在](../../pages/nsc1035/n13712224.md) 
 
 ---
 #### 第 [ [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) ] 页
