--- a/indexes/nsc993/85.md
+++ b/indexes/nsc993/85.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】全世界都在看中共的笑话](../../pages/nsc993/n13800211.md) 
 #### [【网海拾贝】大国崛起后的盛世孤儿](../../pages/nsc993/n13799372.md) 
 #### [【网海拾贝】以为要封台湾岛，结果封的是海南岛](../../pages/nsc993/n13798660.md) 
 #### [王清鹏：移民的你，真的自由了吗？](../../pages/nsc993/n13798677.md) 
@@ -29,7 +30,6 @@
 #### [【网海拾贝】习近平对美发难被怀疑国内出了问题](../../pages/nsc993/n13792623.md) 
 #### [觅真：别错过立功赎罪悔过自新的机会](../../pages/nsc993/n13792611.md) 
 #### [当局为何拒绝公开3-17岁接种新冠疫苗批件？](../../pages/nsc993/n13792608.md) 
-#### [云鹤天：藏头诗—解析中共的华丽辞藻（八首）](../../pages/nsc993/n13792599.md) 
 
 ---
 #### 第 [ [85](./85.md) / [84](./84.md) / [83](./83.md) / [82](./82.md) / [81](./81.md) / [80](./80.md) / [79](./79.md) / [78](./78.md) ] 页
