--- a/indexes/nsc993/85.md
+++ b/indexes/nsc993/85.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [“本来想深度游海南，现在是深度游海南核酸亭”](../../pages/nsc993/n13800984.md) 
+#### [山月：贺四亿同胞三退](../../pages/nsc993/n13800880.md) 
 #### [【网海拾贝】全世界都在看中共的笑话](../../pages/nsc993/n13800211.md) 
 #### [【网海拾贝】大国崛起后的盛世孤儿](../../pages/nsc993/n13799372.md) 
 #### [【网海拾贝】以为要封台湾岛，结果封的是海南岛](../../pages/nsc993/n13798660.md) 
@@ -28,8 +30,6 @@
 #### [疫情防控要算“政治帐”？网友：“就是要面子”](../../pages/nsc993/n13793078.md) 
 #### [唐付民：一个中国，只应建筑在否定“共产专制”之下！](../../pages/nsc993/n13793104.md) 
 #### [【网海拾贝】习近平对美发难被怀疑国内出了问题](../../pages/nsc993/n13792623.md) 
-#### [觅真：别错过立功赎罪悔过自新的机会](../../pages/nsc993/n13792611.md) 
-#### [当局为何拒绝公开3-17岁接种新冠疫苗批件？](../../pages/nsc993/n13792608.md) 
 
 ---
 #### 第 [ [85](./85.md) / [84](./84.md) / [83](./83.md) / [82](./82.md) / [81](./81.md) / [80](./80.md) / [79](./79.md) / [78](./78.md) ] 页
