--- a/indexes/nsc1028/62.md
+++ b/indexes/nsc1028/62.md
@@ -1,5 +1,7 @@
 ### 纪元评论：以史为鉴
 ---
+#### [中共罪行录之八十八：周恩来整龚楚](../../pages/nsc1028/n13800972.md) 
+#### [中共罪行录之八十七：红色恐怖和白色恐怖](../../pages/nsc1028/n13800183.md) 
 #### [中共罪行录之八十六：红七军的悲剧](../../pages/nsc1028/n13799361.md) 
 #### [王友群：中共笔杆子范长江“投井自杀”之谜](../../pages/nsc1028/n13796693.md) 
 #### [中共罪行录八十五：恩将仇报的朱德](../../pages/nsc1028/n13798051.md) 
@@ -28,8 +30,6 @@
 #### [中共罪行录之七十九：崇礼血案](../../pages/nsc1028/n13757521.md) 
 #### [王友群：聂树斌被冤杀27年无一人被追责之谜](../../pages/nsc1028/n13757410.md) 
 #### [中共罪行录之七十八：长春围城惨案](../../pages/nsc1028/n13753340.md) 
-#### [王友群：江泽民被揭“二奸二假”的历史回顾](../../pages/nsc1028/n13752541.md) 
-#### [楚一丁：端午戏言——假如屈原和孔子活在当代](../../pages/nsc1028/n13751814.md) 
 
 ---
 #### 第 [ [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) ] 页
