have a nice day!

--- a/indexes/nsc1025/207.md
+++ b/indexes/nsc1025/207.md
@@ -1,5 +1,7 @@
 ### 纪元评论：时政评论
 ---
+#### [王赫：环台军演是中共战略败笔](../../pages/nsc1025/n13801726.md) 
+#### [周晓辉：大陆殡葬业火得不得了 背后是何因](../../pages/nsc1025/n13801969.md) 
 #### [【名家专栏】欧盟的节能政策只会适得其反](../../pages/nsc1025/n13801118.md) 
 #### [王赫：美推芯片法案 中共芯片政策走向破产](../../pages/nsc1025/n13801025.md) 
 #### [石铭：中共二十大临近 迫害凸显严重](../../pages/nsc1025/n13800931.md) 
@@ -28,8 +30,6 @@
 #### [广宇：论干涉内政](../../pages/nsc1025/n13798407.md) 
 #### [大陆疫情中的人权灾难是中共迫害人民惯性使然](../../pages/nsc1025/n13798386.md) 
 #### [新州：“换心”背后隐藏着中共重重血腥和黑幕](../../pages/nsc1025/n13798376.md) 
-#### [【名家专栏】中共的经济奇迹从来不会持久](../../pages/nsc1025/n13798186.md) 
-#### [王赫：四亿人“三退”的数字和背后艰辛](../../pages/nsc1025/n13797747.md) 
 
 ---
 #### 第 [ [207](./207.md) / [206](./206.md) / [205](./205.md) / [204](./204.md) / [203](./203.md) / [202](./202.md) / [201](./201.md) / [200](./200.md) ] 页
