--- a/indexes/nsc1028/62.md
+++ b/indexes/nsc1028/62.md
@@ -1,5 +1,8 @@
 ### 纪元评论：以史为鉴
 ---
+#### [王友群：中央文革小组十名成员的牢狱之灾](../../pages/nsc1028/n13801415.md) 
+#### [中共罪行录之八十九：“苏区”百姓的劫难](../../pages/nsc1028/n13801773.md) 
+#### [林辉：叶剑英前妻危拱之整风时自杀 晚年凄惨](../../pages/nsc1028/n13801239.md) 
 #### [中共罪行录之八十八：周恩来整龚楚](../../pages/nsc1028/n13800972.md) 
 #### [中共罪行录之八十七：红色恐怖和白色恐怖](../../pages/nsc1028/n13800183.md) 
 #### [中共罪行录之八十六：红七军的悲剧](../../pages/nsc1028/n13799361.md) 
@@ -27,9 +30,6 @@
 #### [【名家专栏】学生应拜访共产主义受难者纪念馆](../../pages/nsc1028/n13762812.md) 
 #### [林辉：抗战时替毛发声的三名记者 后未逃脱迫害](../../pages/nsc1028/n13761727.md) 
 #### [唐山打人事件，别让女权掩盖了中共本质](../../pages/nsc1028/n13757588.md) 
-#### [中共罪行录之七十九：崇礼血案](../../pages/nsc1028/n13757521.md) 
-#### [王友群：聂树斌被冤杀27年无一人被追责之谜](../../pages/nsc1028/n13757410.md) 
-#### [中共罪行录之七十八：长春围城惨案](../../pages/nsc1028/n13753340.md) 
 
 ---
 #### 第 [ [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) ] 页
