--- a/indexes/nsc1035/54.md
+++ b/indexes/nsc1035/54.md
@@ -1,5 +1,7 @@
 ### 纪元评论：感悟随笔
 ---
+#### [楚一丁：为了崔健，干杯！](../../pages/nsc1035/n13802006.md) 
+#### [莎莉：美国人均搬家11次](../../pages/nsc1035/n13801777.md) 
 #### [《坐在自行车上的女孩》：棒打鸳鸯为何打不散？](../../pages/nsc1035/n13799272.md) 
 #### [楚一丁：夏游太浩湖随笔](../../pages/nsc1035/n13796515.md) 
 #### [郑愚山：“墙国”少年躺平纪实](../../pages/nsc1035/n13796701.md) 
@@ -28,8 +30,6 @@
 #### [梁蕊：《神韵作品：后台奇遇》唤醒尘封的记忆](../../pages/nsc1035/n13727363.md) 
 #### [万淑同：请别忽视电影的力量  观《抓捕3》有感](../../pages/nsc1035/n13723311.md) 
 #### [观雨堂主：写信](../../pages/nsc1035/n13722788.md) 
-#### [观雨堂主：作弊](../../pages/nsc1035/n13717221.md) 
-#### [长风拂泪：散文时评——太平年](../../pages/nsc1035/n13713601.md) 
 
 ---
 #### 第 [ [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) ] 页
