have a nice day!

--- a/indexes/nsc1025/207.md
+++ b/indexes/nsc1025/207.md
@@ -1,5 +1,11 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】防疫封锁政策破坏人权和自由](../../pages/nsc1025/n13804521.md) 
+#### [周晓辉：北戴河会议结束 习李胡动向透端倪](../../pages/nsc1025/n13804432.md) 
+#### [石铭：冤判重判何时休？](../../pages/nsc1025/n13804433.md) 
+#### [王友群：四亿人三退有利于台海和平](../../pages/nsc1025/n13803979.md) 
+#### [王清鹏：共产党下台，你做好准备了吗（一）](../../pages/nsc1025/n13804205.md) 
+#### [周晓辉：习去年讲话重登透信息 北戴河不平静？](../../pages/nsc1025/n13803937.md) 
 #### [【名家专栏】中国房屋销售暴跌 危机严重](../../pages/nsc1025/n13803785.md) 
 #### [夏林：加拿大人提前退休，有人欢喜有人愁](../../pages/nsc1025/n13803860.md) 
 #### [袁斌：从邓小平后代炫富和邓朴方病逝说开去](../../pages/nsc1025/n13803520.md) 
@@ -24,12 +30,6 @@
 #### [杨威：美国再提关税 中共还算“政治帐”？](../../pages/nsc1025/n13800728.md) 
 #### [王友群：“共产邪灵”害死人 三退保平安](../../pages/nsc1025/n13800621.md) 
 #### [【名家专栏】海外买家一年购590亿美国房产](../../pages/nsc1025/n13800325.md) 
-#### [禾雨：看中共对法轮功学员“清零”的荒唐伎俩](../../pages/nsc1025/n13800624.md) 
-#### [谢田：红妆绿裹的美国通胀消减法案](../../pages/nsc1025/n13800476.md) 
-#### [【纪元专栏】限制碳排放 特鲁多没以身作则](../../pages/nsc1025/n13800527.md) 
-#### [【有冇搞错】中共攻台时机须待美国内乱](../../pages/nsc1025/n13800361.md) 
-#### [岳山：“拿下政治局委员”的红朝魔咒](../../pages/nsc1025/n13800177.md) 
-#### [周晓辉：金正恩曾染疫 朝鲜抗疫胜利让北京尴尬](../../pages/nsc1025/n13800303.md) 
 
 ---
 #### 第 [ [207](./207.md) / [206](./206.md) / [205](./205.md) / [204](./204.md) / [203](./203.md) / [202](./202.md) / [201](./201.md) / [200](./200.md) ] 页
