--- a/indexes/nsc1035/54.md
+++ b/indexes/nsc1035/54.md
@@ -1,5 +1,6 @@
 ### 纪元评论：感悟随笔
 ---
+#### [吴玉：拿什么守护你的爱情？“宝马”与“自行车”之争](../../pages/nsc1035/n13804482.md) 
 #### [楚一丁：为了崔健，干杯！](../../pages/nsc1035/n13802006.md) 
 #### [莎莉：美国人均搬家11次](../../pages/nsc1035/n13801777.md) 
 #### [《坐在自行车上的女孩》：棒打鸳鸯为何打不散？](../../pages/nsc1035/n13799272.md) 
@@ -29,7 +30,6 @@
 #### [吴玉：守护内心的善良之光，那是夜空最亮的星星](../../pages/nsc1035/n13729214.md) 
 #### [梁蕊：《神韵作品：后台奇遇》唤醒尘封的记忆](../../pages/nsc1035/n13727363.md) 
 #### [万淑同：请别忽视电影的力量  观《抓捕3》有感](../../pages/nsc1035/n13723311.md) 
-#### [观雨堂主：写信](../../pages/nsc1035/n13722788.md) 
 
 ---
 #### 第 [ [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) ] 页
