have a nice day!

--- a/indexes/nsc1025/208.md
+++ b/indexes/nsc1025/208.md
@@ -1,5 +1,7 @@
 ### 纪元评论：时政评论
 ---
+#### [中共的武统和统之外：斑点鬣狗新战法](../../pages/nsc1025/n13805448.md) 
+#### [吴惠林：飞越经济统战陷阱](../../pages/nsc1025/n13805363.md) 
 #### [【有冇搞错】北戴河会议结束 李克强忧心忡忡](../../pages/nsc1025/n13804836.md) 
 #### [袁斌：和服事件 寻衅滋事的是当事女子还是警察？](../../pages/nsc1025/n13805053.md) 
 #### [王赫：中国如何走出人口危局？](../../pages/nsc1025/n13804930.md) 
@@ -28,8 +30,6 @@
 #### [王赫：环台军演是中共战略败笔](../../pages/nsc1025/n13801726.md) 
 #### [周晓辉：大陆殡葬业火得不得了 背后是何因](../../pages/nsc1025/n13801969.md) 
 #### [【名家专栏】欧盟的节能政策只会适得其反](../../pages/nsc1025/n13801118.md) 
-#### [王赫：美推芯片法案 中共芯片政策走向破产](../../pages/nsc1025/n13801025.md) 
-#### [石铭：中共二十大临近 迫害凸显严重](../../pages/nsc1025/n13800931.md) 
 
 ---
-#### 第 [ [207](./207.md) / [206](./206.md) / [205](./205.md) / [204](./204.md) / [203](./203.md) / [202](./202.md) / [201](./201.md) / [200](./200.md) ] 页
+#### 第 [ [208](./208.md) / [207](./207.md) / [206](./206.md) / [205](./205.md) / [204](./204.md) / [203](./203.md) / [202](./202.md) / [201](./201.md) ] 页
