--- a/indexes/nsc1025/208.md
+++ b/indexes/nsc1025/208.md
@@ -1,5 +1,12 @@
 ### 纪元评论：时政评论
 ---
+#### [颜丹：辟谣中国人在瑞士有存款 中共怕啥？](../../pages/nsc1025/n13806126.md) 
+#### [周晓辉：李克强深圳推改革 效用难及邓南巡](../../pages/nsc1025/n13805874.md) 
+#### [觅真：中共迫害老人 惨无人道丧尽天良！](../../pages/nsc1025/n13805777.md) 
+#### [王赫：“二十大”前省际矛盾激化？](../../pages/nsc1025/n13805599.md) 
+#### [钟原：党媒报导中共高层又现蹊跷？](../../pages/nsc1025/n13805608.md) 
+#### [【纪元专栏】今年加国普通家庭为公共医疗买单1.5万多](../../pages/nsc1025/n13805493.md) 
+#### [杨威：川普可能重回风口浪尖吗？](../../pages/nsc1025/n13804966.md) 
 #### [中共的武统和统之外：斑点鬣狗新战法](../../pages/nsc1025/n13805448.md) 
 #### [吴惠林：飞越经济统战陷阱](../../pages/nsc1025/n13805363.md) 
 #### [【有冇搞错】北戴河会议结束 李克强忧心忡忡](../../pages/nsc1025/n13804836.md) 
@@ -23,13 +30,6 @@
 #### [沈舟：中共频出动Su-30战机泄露了什么？](../../pages/nsc1025/n13802628.md) 
 #### [【名家专栏】全球经济与中共脱钩正加速](../../pages/nsc1025/n13802363.md) 
 #### [周晓辉：孙春兰海南行党媒报道异常 北戴河有事？](../../pages/nsc1025/n13802581.md) 
-#### [陆客：你支持天灭中共吗？](../../pages/nsc1025/n13802257.md) 
-#### [觅真：京畿重地冤案多 结束迫害刻不容缓！](../../pages/nsc1025/n13802230.md) 
-#### [观雨堂主：民众已被中共关入笼子](../../pages/nsc1025/n13802201.md) 
-#### [钟原：北戴河会议是否结束 谁占了上风？](../../pages/nsc1025/n13802119.md) 
-#### [王赫：环台军演是中共战略败笔](../../pages/nsc1025/n13801726.md) 
-#### [周晓辉：大陆殡葬业火得不得了 背后是何因](../../pages/nsc1025/n13801969.md) 
-#### [【名家专栏】欧盟的节能政策只会适得其反](../../pages/nsc1025/n13801118.md) 
 
 ---
 #### 第 [ [208](./208.md) / [207](./207.md) / [206](./206.md) / [205](./205.md) / [204](./204.md) / [203](./203.md) / [202](./202.md) / [201](./201.md) ] 页
