have a nice day!

--- a/indexes/nsc1025/208.md
+++ b/indexes/nsc1025/208.md
@@ -1,5 +1,12 @@
 ### 纪元评论：时政评论
 ---
+#### [岳山：习近平纪念内战 涉中共阴暗军史](../../pages/nsc1025/n13806669.md) 
+#### [【名家专栏】腾讯儿童游戏成中共间谍武器](../../pages/nsc1025/n13806034.md) 
+#### [崩坏乱世里的中国人 如何面对最坏的时代？](../../pages/nsc1025/n13806590.md) 
+#### [王赫：西方要脱钩 习李有分歧？](../../pages/nsc1025/n13806338.md) 
+#### [王友群：近期开审的六名亿元“政法虎”排行榜](../../pages/nsc1025/n13806233.md) 
+#### [【名家专栏】中共为何没采取刺激经济措施？](../../pages/nsc1025/n13805293.md) 
+#### [周晓辉：跨市抓自媒体人 唐山嚣张背后心中有鬼](../../pages/nsc1025/n13806228.md) 
 #### [颜丹：辟谣中国人在瑞士有存款 中共怕啥？](../../pages/nsc1025/n13806126.md) 
 #### [周晓辉：李克强深圳推改革 效用难及邓南巡](../../pages/nsc1025/n13805874.md) 
 #### [觅真：中共迫害老人 惨无人道丧尽天良！](../../pages/nsc1025/n13805777.md) 
@@ -23,13 +30,6 @@
 #### [夏林：加拿大人提前退休，有人欢喜有人愁](../../pages/nsc1025/n13803860.md) 
 #### [袁斌：从邓小平后代炫富和邓朴方病逝说开去](../../pages/nsc1025/n13803520.md) 
 #### [王友群：退出极端的中共 回归平和的传统](../../pages/nsc1025/n13803234.md) 
-#### [观雨堂主：佩洛西访台的真正意义](../../pages/nsc1025/n13803062.md) 
-#### [影响2022年美国中期选举的几大要素](../../pages/nsc1025/n13802590.md) 
-#### [岳山：北戴河会后习近平首发声 证实受压？](../../pages/nsc1025/n13802942.md) 
-#### [颜丹：翟山鹰骂司马南的底气何在？](../../pages/nsc1025/n13802558.md) 
-#### [沈舟：中共频出动Su-30战机泄露了什么？](../../pages/nsc1025/n13802628.md) 
-#### [【名家专栏】全球经济与中共脱钩正加速](../../pages/nsc1025/n13802363.md) 
-#### [周晓辉：孙春兰海南行党媒报道异常 北戴河有事？](../../pages/nsc1025/n13802581.md) 
 
 ---
 #### 第 [ [208](./208.md) / [207](./207.md) / [206](./206.md) / [205](./205.md) / [204](./204.md) / [203](./203.md) / [202](./202.md) / [201](./201.md) ] 页
