--- a/indexes/nsc993/86.md
+++ b/indexes/nsc993/86.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】中共现在处于“自我毁灭状态”](../../pages/nsc993/n13806544.md) 
+#### [云松：哀长江](../../pages/nsc993/n13806519.md) 
 #### [【网海拾贝】上海财政赤字，是明确的经济崩溃信号！](../../pages/nsc993/n13805813.md) 
 #### [郑纯清：“小康”跟“紧日子”的“政治帐”](../../pages/nsc993/n13805792.md) 
 #### [程绍蟾：中元节被抢记](../../pages/nsc993/n13805756.md) 
@@ -28,8 +30,6 @@
 #### [王清鹏：移民的你，真的自由了吗？](../../pages/nsc993/n13798677.md) 
 #### [大陆经济学家：中共为何不愿结束“过度防疫”？](../../pages/nsc993/n13798649.md) 
 #### [郑法途：四亿囚徒庆新生](../../pages/nsc993/n13798448.md) 
-#### [许那：当恐怖侵入日常生活 讲真相要付多大代价](../../pages/nsc993/n13798299.md) 
-#### [唐付民：“民族主权”不应该成为“民主主权”的恶魔！](../../pages/nsc993/n13798069.md) 
 
 ---
 #### 第 [ [86](./86.md) / [85](./85.md) / [84](./84.md) / [83](./83.md) / [82](./82.md) / [81](./81.md) / [80](./80.md) / [79](./79.md) ] 页
