--- a/indexes/nsc1026/53.md
+++ b/indexes/nsc1026/53.md
@@ -1,5 +1,6 @@
 ### 纪元评论：财经评论
 ---
+#### [蒋天明：《降低通胀法案》恐加剧通胀](../../pages/nsc1026/n13806996.md) 
 #### [王赫：2022中国经济风雨飘摇？](../../pages/nsc1026/n13803207.md) 
 #### [王赫：中概股退市使中共更不可能“弯道超车”](../../pages/nsc1026/n13802858.md) 
 #### [从总统拜登的税表中 我们学到什么？](../../pages/nsc1026/n13773081.md) 
@@ -29,7 +30,6 @@
 #### [吴惠林：通货膨胀终究是货币现象](../../pages/nsc1026/n13512979.md) 
 #### [蔡慎坤：恒大倒下谁还能活下去？](../../pages/nsc1026/n13501831.md) 
 #### [王赫：中共开放金融与华尔街“博傻”](../../pages/nsc1026/n13501138.md) 
-#### [陈思敏：中共晒2021年外商投资未提台资的背后](../../pages/nsc1026/n13501057.md) 
 
 ---
 #### 第 [ [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) ] 页
