--- a/indexes/nsc993/86.md
+++ b/indexes/nsc993/86.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [吐为快：危邦赋](../../pages/nsc993/n13807006.md) 
 #### [【网海拾贝】中共现在处于“自我毁灭状态”](../../pages/nsc993/n13806544.md) 
 #### [云松：哀长江](../../pages/nsc993/n13806519.md) 
 #### [【网海拾贝】上海财政赤字，是明确的经济崩溃信号！](../../pages/nsc993/n13805813.md) 
@@ -29,7 +30,6 @@
 #### [【网海拾贝】以为要封台湾岛，结果封的是海南岛](../../pages/nsc993/n13798660.md) 
 #### [王清鹏：移民的你，真的自由了吗？](../../pages/nsc993/n13798677.md) 
 #### [大陆经济学家：中共为何不愿结束“过度防疫”？](../../pages/nsc993/n13798649.md) 
-#### [郑法途：四亿囚徒庆新生](../../pages/nsc993/n13798448.md) 
 
 ---
 #### 第 [ [86](./86.md) / [85](./85.md) / [84](./84.md) / [83](./83.md) / [82](./82.md) / [81](./81.md) / [80](./80.md) / [79](./79.md) ] 页
