--- a/indexes/nsc993/86.md
+++ b/indexes/nsc993/86.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】肖建华们都会死在监狱里吗？](../../pages/nsc993/n13807536.md) 
+#### [陆客：由中共的重大发现想到的](../../pages/nsc993/n13807284.md) 
 #### [吐为快：危邦赋](../../pages/nsc993/n13807006.md) 
 #### [【网海拾贝】中共现在处于“自我毁灭状态”](../../pages/nsc993/n13806544.md) 
 #### [云松：哀长江](../../pages/nsc993/n13806519.md) 
@@ -28,8 +30,6 @@
 #### [【网海拾贝】全世界都在看中共的笑话](../../pages/nsc993/n13800211.md) 
 #### [【网海拾贝】大国崛起后的盛世孤儿](../../pages/nsc993/n13799372.md) 
 #### [【网海拾贝】以为要封台湾岛，结果封的是海南岛](../../pages/nsc993/n13798660.md) 
-#### [王清鹏：移民的你，真的自由了吗？](../../pages/nsc993/n13798677.md) 
-#### [大陆经济学家：中共为何不愿结束“过度防疫”？](../../pages/nsc993/n13798649.md) 
 
 ---
 #### 第 [ [86](./86.md) / [85](./85.md) / [84](./84.md) / [83](./83.md) / [82](./82.md) / [81](./81.md) / [80](./80.md) / [79](./79.md) ] 页
