--- a/indexes/nsc993/86.md
+++ b/indexes/nsc993/86.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [金浴凤：朋友，你是炎黄子孙吗？](../../pages/nsc993/n13808828.md) 
+#### [【网海拾贝】中国搭上了仇恨号失速列车](../../pages/nsc993/n13808946.md) 
 #### [【网海拾贝】北戴河会议后的中共政局——假和谐与半稳定](../../pages/nsc993/n13808238.md) 
 #### [党史专家司马璐破碎的“延安梦”（5）：“为党工作却不被信任”](../../pages/nsc993/n13808233.md) 
 #### [【网海拾贝】肖建华们都会死在监狱里吗？](../../pages/nsc993/n13807536.md) 
@@ -28,8 +30,6 @@
 #### [【网海拾贝】通向未来的航班可能没有我们的座位](../../pages/nsc993/n13801792.md) 
 #### [【网海拾贝】所谓亡党亡国不过是中共的瞎忽悠](../../pages/nsc993/n13801761.md) 
 #### [“本来想深度游海南，现在是深度游海南核酸亭”](../../pages/nsc993/n13800984.md) 
-#### [山月：贺四亿同胞三退](../../pages/nsc993/n13800880.md) 
-#### [【网海拾贝】全世界都在看中共的笑话](../../pages/nsc993/n13800211.md) 
 
 ---
 #### 第 [ [86](./86.md) / [85](./85.md) / [84](./84.md) / [83](./83.md) / [82](./82.md) / [81](./81.md) / [80](./80.md) / [79](./79.md) ] 页
