--- a/indexes/nsc1025/209.md
+++ b/indexes/nsc1025/209.md
@@ -1,5 +1,11 @@
 ### 纪元评论：时政评论
 ---
+#### [周晓辉：中共二十大会期待公布 习出席G20有变数](../../pages/nsc1025/n13810930.md) 
+#### [杨威：美国连番制裁 继续影响中共二十大](../../pages/nsc1025/n13810387.md) 
+#### [王友群：正告中共司法部长唐一军四件事](../../pages/nsc1025/n13810266.md) 
+#### [【名家专栏】共产主义与第二次世界大战起源](../../pages/nsc1025/n13809918.md) 
+#### [周晓辉：美获新证 俄采购中国无人机涉用于战争](../../pages/nsc1025/n13810279.md) 
+#### [【纪元专栏】疫苗强制令 基于科学还是政治动机？](../../pages/nsc1025/n13810227.md) 
 #### [李明：疫情为何挥之不去？](../../pages/nsc1025/n13810084.md) 
 #### [韦拓：司马南出事 中共大五毛寒冬或来临](../../pages/nsc1025/n13809452.md) 
 #### [【有冇搞错】张献忠宝藏出世 “后来治蜀要深思”](../../pages/nsc1025/n13809381.md) 
@@ -24,12 +30,6 @@
 #### [王友群：台湾成各国政要竞相到访之地](../../pages/nsc1025/n13807989.md) 
 #### [【名家专栏】现在是时候尝试结束俄乌战争吗？](../../pages/nsc1025/n13807723.md) 
 #### [清竹：谁敢拉开“大审判”的序幕？](../../pages/nsc1025/n13807508.md) 
-#### [分析：《降低通胀法》对美国人的影响](../../pages/nsc1025/n13807179.md) 
-#### [【名家专栏】《通胀削减法案》不会降低通胀](../../pages/nsc1025/n13807172.md) 
-#### [王赫：2022为何又电荒，长江接近断流？](../../pages/nsc1025/n13806942.md) 
-#### [石铭：有多少善良女性遭性侵迫害？](../../pages/nsc1025/n13806994.md) 
-#### [千百度：习李之争与习下李上的传言](../../pages/nsc1025/n13806971.md) 
-#### [王友群：穿越美国48州的独特车队](../../pages/nsc1025/n13806826.md) 
 
 ---
 #### 第 [ [209](./209.md) / [208](./208.md) / [207](./207.md) / [206](./206.md) / [205](./205.md) / [204](./204.md) / [203](./203.md) / [202](./202.md) ] 页
