--- a/indexes/nsc1028/62.md
+++ b/indexes/nsc1028/62.md
@@ -1,5 +1,7 @@
 ### 纪元评论：以史为鉴
 ---
+#### [王友群：马恩列斯毛的子女们](../../pages/nsc1028/n13811048.md) 
+#### [周恩来的狡诈和无情](../../pages/nsc1028/n13810621.md) 
 #### [林辉：“当代牧马人”曲啸演讲骗人 美国行崩溃](../../pages/nsc1028/n13807528.md) 
 #### [党史专家司马璐破碎的“延安梦”（4）：从“假想情敌”到“假想政敌”](../../pages/nsc1028/n13807524.md) 
 #### [党史专家司马璐破碎的“延安梦”（3）：“托派”阴影](../../pages/nsc1028/n13806978.md) 
@@ -28,8 +30,6 @@
 #### [【名家专栏】所谓的觉醒资本主义是左翼谎言](../../pages/nsc1028/n13777457.md) 
 #### [中共罪行录之八十一：因“破坏交通”获罪的倪匡](../../pages/nsc1028/n13777594.md) 
 #### [【名家专栏】中国的先哲们会鄙视中共所为](../../pages/nsc1028/n13772913.md) 
-#### [中共罪行录之八十一：“二流堂”冤案](../../pages/nsc1028/n13772788.md) 
-#### [王友群：涉案103亿元的金融巨贪落马之反思](../../pages/nsc1028/n13772297.md) 
 
 ---
 #### 第 [ [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) ] 页
