--- a/indexes/nsc993/86.md
+++ b/indexes/nsc993/86.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】“天塌下来也要核酸”](../../pages/nsc993/n13811406.md) 
+#### [火山：老舍投湖到现代知识分子落跑](../../pages/nsc993/n13811414.md) 
+#### [没能熬过酷热，许多老人死在了这个夏天](../../pages/nsc993/n13811366.md) 
 #### [【网海拾贝】2022年中国魔幻时刻](../../pages/nsc993/n13810635.md) 
 #### [周恩来的狡诈和无情](../../pages/nsc993/n13810621.md) 
 #### [大数据说话，疫苗有效率严重造假！（四）](../../pages/nsc993/n13810534.md) 
@@ -27,9 +30,6 @@
 #### [【网海拾贝】在一个号称盛世的时代](../../pages/nsc993/n13803539.md) 
 #### [【网海拾贝】中华民国存在一天，中共政权就是非法的！](../../pages/nsc993/n13802875.md) 
 #### [大数据说话，疫苗有效率严重造假！（三）](../../pages/nsc993/n13802738.md) 
-#### [高智晟律师——真正的爱国者与男子汉大丈夫](../../pages/nsc993/n13802191.md) 
-#### [李明：中共防疫的骗局](../../pages/nsc993/n13802275.md) 
-#### [唐付民：佩洛西访台“升级了台海局势” 是人类文明进步的必然结果](../../pages/nsc993/n13802193.md) 
 
 ---
 #### 第 [ [86](./86.md) / [85](./85.md) / [84](./84.md) / [83](./83.md) / [82](./82.md) / [81](./81.md) / [80](./80.md) / [79](./79.md) ] 页
